--- a/librarymanage/templates/base.html
+++ b/librarymanage/templates/base.html
@@ -1,12 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIbrary</title>
+    {% comment %} Google fonts {% endcomment %}
+    {% comment %} Bootstrap {% endcomment %}
+    <link rel="stylesheet" href="{% 'static/styles.css' %}">
+    <title>Library Management System</title>
 </head>
 <body>
+    {% comment %} Navbar {% endcomment %}
+    {% block navbar %}
     
+    {% endblock navbar %}
+    {% comment %} content {% endcomment %}
+    {% block content %}
+    
+    {% endblock content %}
+    {% comment %} Footer {% endcomment %}
+    {% block footer %}
+    
+    {% endblock footer %}
 </body>
 </html>
