Made some changes in the code

--- a/librarymanage/templates/book_delete.html
+++ b/librarymanage/templates/book_delete.html
@@ -2,4 +2,9 @@
 {% extends 'templates/base.html' %}
 {% block content %}
 
+    <form method="post">
+        <p>Are you sure want to delete this book?</p>
+        <input type="submit" value="Confirm">
+    </form>
+
 {% endblock content %}
